try to relative paths

--- a/src/Q4S-client-server/Q4SServer/Q4SServer.vcxproj
+++ b/src/Q4S-client-server/Q4SServer/Q4SServer.vcxproj
@@ -50,7 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>F:\Work\Projects\ARQUEOPTERIX\src\Q4S-client-server\Q4SCommon;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Q4SCommon;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
