--- a/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj
+++ b/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj
@@ -50,7 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>F:\Work\Projects\ARQUEOPTERIX\src\Q4S-client-server\Q4SCommon;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Q4SCommon;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -78,12 +78,14 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Q4SClientState.h" />
     <ClInclude Include="Q4SClientStateManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SClient.cpp" />
+    <ClCompile Include="Q4SClientState.cpp" />
     <ClCompile Include="Q4SClientStateManager.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
