--- a/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj.filters
+++ b/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Q4SClientStateManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Q4SClientState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Q4SClientStateManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q4SClientState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
