--- a/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj
+++ b/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj
@@ -78,6 +78,7 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Q4SClientProtocol.h" />
     <ClInclude Include="Q4SClientState.h" />
     <ClInclude Include="Q4SClientStateManager.h" />
     <ClInclude Include="stdafx.h" />
@@ -85,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SClient.cpp" />
+    <ClCompile Include="Q4SClientProtocol.cpp" />
     <ClCompile Include="Q4SClientStateManager.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
