--- a/src/Q4S-client-server/Q4SServer/Q4SServer.vcxproj
+++ b/src/Q4S-client-server/Q4SServer/Q4SServer.vcxproj
@@ -78,11 +78,13 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Q4SServerSocket.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SServer.cpp" />
+    <ClCompile Include="Q4SServerSocket.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
