--- a/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj
+++ b/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Q4SClientProtocol.h" />
+    <ClInclude Include="Q4SClientSocket.h" />
     <ClInclude Include="Q4SClientState.h" />
     <ClInclude Include="Q4SClientStateManager.h" />
     <ClInclude Include="stdafx.h" />
@@ -87,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="Q4SClient.cpp" />
     <ClCompile Include="Q4SClientProtocol.cpp" />
+    <ClCompile Include="Q4SClientSocket.cpp" />
     <ClCompile Include="Q4SClientStateManager.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
