--- a/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj.filters
+++ b/src/Q4S-client-server/Q4SClient/Q4SClient.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Q4SClientProtocol.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Q4SClientSocket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Q4SClientProtocol.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q4SClientSocket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
