--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -73,9 +73,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Q4SCommon.h" />
+    <ClInclude Include="Q4SSocket.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SCommon.cpp" />
+    <ClCompile Include="Q4SSocket.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
