fmt files added

--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="Q4SSocket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fmt\format.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SCommon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Q4SSocket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fmt\format.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
