--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -72,10 +72,12 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="fmt\format.h" />
     <ClInclude Include="Q4SCommon.h" />
     <ClInclude Include="Q4SSocket.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="fmt\format.cc" />
     <ClCompile Include="Q4SCommon.cpp" />
     <ClCompile Include="Q4SSocket.cpp" />
   </ItemGroup>
