--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -74,12 +74,14 @@
   <ItemGroup>
     <ClInclude Include="fmt\format.h" />
     <ClInclude Include="Q4SCommon.h" />
+    <ClInclude Include="Q4SCriticalSection.h" />
     <ClInclude Include="Q4SMessageManager.h" />
     <ClInclude Include="Q4SSocket.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fmt\format.cc" />
     <ClCompile Include="Q4SCommon.cpp" />
+    <ClCompile Include="Q4SCriticalSection.cpp" />
     <ClCompile Include="Q4SMessageManager.cpp" />
     <ClCompile Include="Q4SSocket.cpp" />
   </ItemGroup>
