--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -72,6 +72,7 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ETime.h" />
     <ClInclude Include="fmt\format.h" />
     <ClInclude Include="Q4SCommon.h" />
     <ClInclude Include="Q4SCriticalSection.h" />
@@ -79,6 +80,7 @@
     <ClInclude Include="Q4SSocket.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ETime.cpp" />
     <ClCompile Include="fmt\format.cc" />
     <ClCompile Include="Q4SCommon.cpp" />
     <ClCompile Include="Q4SCriticalSection.cpp" />
