--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -73,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConfigFile.h" />
+    <ClInclude Include="EKey.h" />
+    <ClInclude Include="EKeyCodes.h" />
     <ClInclude Include="ETime.h" />
     <ClInclude Include="fmt\format.h" />
     <ClInclude Include="Q4SMathUtils.h" />
@@ -84,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConfigFile.cpp" />
+    <ClCompile Include="EKey.cpp" />
     <ClCompile Include="ETime.cpp" />
     <ClCompile Include="fmt\format.cc" />
     <ClCompile Include="Q4SCommon.cpp" />
