--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Thumbs.db
 # if your project uses Pre-compiled Headers (PCH); it is a storage for Intellisense compiler which can now utilise PCH for better performance
 ipch/
 Debug/
+Release/
 src/Q4S-client-server/Q4S-client-server.opensdf
 src/Q4S-client-server_VS2012/Q4S-client-server.opensdf
 .idea/
