--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="EKeyCodes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Q4SMessage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SCommon.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EKey.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q4SMessage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
