Initial SDP  definition

--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Q4SMessageInfo.h" />
     <ClInclude Include="Q4SMessageManager.h" />
     <ClInclude Include="Q4SMessage.h" />
+    <ClInclude Include="Q4SSDP.h" />
     <ClInclude Include="Q4SSocket.h" />
   </ItemGroup>
   <ItemGroup>
@@ -95,6 +96,7 @@
     <ClCompile Include="Q4SMathUtils.cpp" />
     <ClCompile Include="Q4SMessageManager.cpp" />
     <ClCompile Include="Q4SMessage.cpp" />
+    <ClCompile Include="Q4SSDP.cpp" />
     <ClCompile Include="Q4SSocket.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
