--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Q4SMessage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Q4SSDP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SCommon.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Q4SMessage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q4SSDP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
