--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="Q4SMessageTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Q4SStructs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Q4SCommon.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Q4SMessageTools.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q4SStructs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
