Common protocol with checkstage0

--- a/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
+++ b/src/Q4S-client-server/Q4SCommon/Q4SCommon.vcxproj
@@ -72,12 +72,14 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Q4SCommonProtocol.cpp" />
     <ClCompile Include="Q4SStructs.cpp" />
     <ClInclude Include="ConfigFile.h" />
     <ClInclude Include="EKey.h" />
     <ClInclude Include="EKeyCodes.h" />
     <ClInclude Include="ETime.h" />
     <ClInclude Include="fmt\format.h" />
+    <ClInclude Include="Q4SCommonProtocol.h" />
     <ClInclude Include="Q4SMathUtils.h" />
     <ClInclude Include="Q4SCommon.h" />
     <ClInclude Include="Q4SCriticalSection.h" />
